--- a/c/styles.css
+++ b/c/styles.css
@@ -1278,16 +1278,22 @@
   /* Directory styles */
   .record-info {
     float: left;
+    margin-top: -25px;
+    margin-left: -20px;
     width: 70%;
   }
 
   .profile-picture {
     float: right;
+    margin-left: -100px;
+    margin-top: -63px;
     width: 30%;
+    padding-bottom: 4em;
   }
 
   .page-content {
     min-height: 60%;
+    margin-top: -50px;
   }
 
   #records a,
@@ -1305,11 +1311,12 @@
 
   #filters {
     list-style: none;
+    margin-top: -15px;
     /*  font-size: 16px; */
     padding-right: 10px;
   }
   #filters ul {
-    margin-top: 0;
+    margin-top: -15px;
   }
   #filters a {
     cursor: pointer;
@@ -1348,19 +1355,19 @@
 
   /* colors for different types of institutions */
   .graduate {
-    background-color: #7D7F44;
+    background-color: #466281;
   }
 
-  .undergraduate {
+  .undergraduate, .honors-level {
     background-color: #5B9076;
   }
 
   .post-graduate {
-    background-color: #43607E;
+    background-color: #844865;
   }
 
   .other {
-    background-color: #B58686;
+    background-color: #824646;
   }
 
   /* colors for different programs */
@@ -1390,10 +1397,6 @@
 
   .interactive {
     background-color: #824646;
-  }
-
-  .honors-level {
-    background-color: #5B9076;
   }
 }
 @media print {
